# ChangeLog for dev-python/python-docs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-docs/ChangeLog,v 1.193 2014/09/02 06:44:19 idella4 Exp $

  02 Sep 2014; Ian Delaney <idella4@gentoo.org> python-docs-2.7.6.ebuild,
  python-docs-3.3.5.ebuild, python-docs-3.4.0.ebuild:
  add install of objects.inv for most recent py2.7,3.3,3.4 wrt to Bug #521768

*python-docs-3.3.5 (23 Mar 2014)
*python-docs-3.4.0 (23 Mar 2014)

  23 Mar 2014; Ian Delaney <idella4@gentoo.org> +python-docs-3.3.5.ebuild,
  +python-docs-3.4.0.ebuild:
  New docs ebuilds for new versions

*python-docs-3.3.4 (17 Feb 2014)
*python-docs-2.6.9 (17 Feb 2014)
*python-docs-2.7.6 (17 Feb 2014)

  17 Feb 2014; Ian Delaney <idella4@gentoo.org> +python-docs-2.6.9.ebuild,
  +python-docs-2.7.6.ebuild, +python-docs-3.3.4.ebuild:
  bumps, advance EAPI -> 5

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> python-docs-2.7.3.ebuild,
  python-docs-2.7.4.ebuild, python-docs-2.7.5.ebuild, python-docs-3.3.2.ebuild,
  python-docs-3.3.3.ebuild:
  Add arm64 love.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> python-docs-2.6.8.ebuild,
  python-docs-2.7.3.ebuild, python-docs-3.1.5.ebuild, python-docs-3.2.3.ebuild,
  python-docs-3.3.2.ebuild:
  Mark m68k/s390/sh stable.

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> python-docs-3.3.2.ebuild:
  Stable for ia64, wrt bug #474128

*python-docs-3.3.3 (11 Jan 2014)

  11 Jan 2014; Mike Gilbert <floppym@gentoo.org> +python-docs-3.3.3.ebuild:
  Bump.

  05 Jan 2014; Agostino Sarubbo <ago@gentoo.org> python-docs-3.3.2.ebuild:
  Stable for ppc64, wrt bug #474128

  05 Jan 2014; Agostino Sarubbo <ago@gentoo.org> python-docs-3.3.2.ebuild:
  Stable for ppc, wrt bug #474128

  26 Dec 2013; Markus Meier <maekke@gentoo.org> python-docs-3.3.2.ebuild:
  arm stable, bug #474128

  15 Dec 2013; Agostino Sarubbo <ago@gentoo.org> python-docs-3.3.2.ebuild:
  Stable for sparc, wrt bug #474128
