@@ -28,7 +28,8 @@ EBUILD python-docs-2.6.9.ebuild 1057 SHA256 ca04e095497ec90cfa8900157eae5bf8a7b7
 EBUILD python-docs-2.7.3.ebuild 1050 SHA256 9f66e7738e5a422dbc819206144edbe7d2bc1c2555a9be69ce9f3d3214194843 SHA512 f33bf434829addaf94922df0e3961913858423efa9711162a18ae76c4c25af2e4b4f5c18909a6503ba319d347c26e35bb7d49b5020070c6670940339a39e2a55 WHIRLPOOL 87f2e688a5fa9b9c9b832930ff9c4af6857ddba39a731c64ce45c997a63b1886efb5c34b89c68990d360d8550e441478efedfd3f721a2aa45b50243e615a3853
 EBUILD python-docs-2.7.4.ebuild 1063 SHA256 e7ea6f8342ef5ced743bf157d2d91ee7172846bb0606050822615db3af6c3920 SHA512 c5d9228917716302e9abc6da8280a00cb942b70d60c532a2c471b4c9811227d8746b5285070b7b3f4c235c4ff15c0ce805cb79551cfa5386dcfafe35ee0a7b2a WHIRLPOOL ffbf1bd2a743551c9213feb301c17bb5322c2ae81e24a8e1b24905ea6542d58e50bdbfa2c15d7be0667eb87f975055ec26a36f02189015a59b78ce7edcbe633a
 EBUILD python-docs-2.7.5.ebuild 1074 SHA256 38b79fa0cc035e72594d3c7ecbfc4cb2702090f2586b7f4c8598b395e8981069 SHA512 1edf6bba55578569aac163002f91fbc99feea80b2cede25358546ab4148a0d44cdbaae685aa6f1035a203cee14d8ff4b87afe363327560345af384aebaed3475 WHIRLPOOL c54ea9d830deb8fd0513c025dfc6e44156f3f74d800079293c28c7f44466d0c058aa3d3840177e374eed08260a5a5540d636249f6e410b16285c4102be8d9708
-EBUILD python-docs-2.7.6.ebuild 1082 SHA256 a745715e69f5ba612c6151808268f47825cd9ad909d776bd7d9c35b0f08e3177 SHA512 e871554ce6e6a5793baed4594390e0c71d55760f8442216f452a60376ba943e7807bacbd5776bfd2b5533506650b9a33d1c1e0f08bf5f9af729b2f64de16df04 WHIRLPOOL b94a3fd0a6476eb436c9ac5dca4b77c870667b7c9adcf7199d2819d7ef90a3797d2cd03d6c94190c5612b89192cbe544ad622ba204dd34a8103c03242d518b60
+EBUILD python-docs-2.7.6-r1.ebuild 1085 SHA256 e55ac5ba071e0b2f0c4c3cfd9402adabc4279d2622c2c18db973a6668527f49e SHA512 d4ba46865605c0ed1c2fa765d2eef18522a23796c61c0e477dc58c83feb5c8728231b9e3593729aa10861e250b6f34b0a5f129635d95f02eb87603e3bd030430 WHIRLPOOL 81305e0bd83ad51e47b34fe5c009f8b234a2398c77ad6b87ee9ffe76c6db9f765c7754916c1b819ab56a7bcbbdfbc4fd0aacbb1da6f2c093575fb1fecf18fd86
+EBUILD python-docs-2.7.6.ebuild 1075 SHA256 70ab6051d919dbaab26372858890755d42e8f1fcdfef7519dc6ee8616aae7a65 SHA512 77a31dd721f24b2b6e8741832b3c6a642e6040fb6f4bebec792d48d9684c856132975e22072931e9c0cfef26efc6b42f97ab8599af9ed84a4ccd2b6df638ddc4 WHIRLPOOL 3d333ecb194c59062d5d5f947f8374dddff5b126cc5fc56340f188c8bdcba0ad785cd78fa9d5f4929101669b93324904af7e0d173336e6c3f236a1a24fc58c1f
 EBUILD python-docs-3.1.5.ebuild 1044 SHA256 0fc7071fb5f48f3ca4d5c5f26faa7b59a9150860337647d59197910a37abe378 SHA512 aeb9ffe042905cc56e1254ede4ea3cedb6425eaf96015ef8b5f7a7d10f4eaa027a1d856d95c7693ab0ebd8418ab774c2cb65a219c5de9b02d3f4180821650d15 WHIRLPOOL e65c58c48db71284631297747bdb4fc3a8a4216bf11a3793f5b79d575dbf5e3facf67293609589709b7258794962ca696e5dff7ec6ea73664d7f59f892b90bb9
 EBUILD python-docs-3.2.3.ebuild 1044 SHA256 078ac416cf52fab6b44b4aaf41564bfad54abfec8bfd847197052d26f0927cb6 SHA512 512886ffc9116021fcb85b005c635e554d7f2bcd9705c06ac91ea72d754647da90671db6f2a940c66832c8c0f9c17dff48b1b05117e7f3fbe7db00587ea459c5 WHIRLPOOL fb1e484c5afc21877cbb237489465161bd01a73049dba34c73c1590f01cdc665cb0525ffe6e83080b94d339ed03cad674cffaebbca9e466f4172ddcf4d4f2f2a
 EBUILD python-docs-3.2.4.ebuild 1057 SHA256 c4455878ba420a049e1ff341d5f514193c9726348d62e1912326fd9c7f6e399d SHA512 3894a7ba08c1ef221ada4772e27db17068ee898a31cdda149925d350c8bf01efd6932a162d63a352c92113a93a679e7766cbd585a39753b8e1e5e7e44600acb2 WHIRLPOOL 62b061a9c8401d44e8a74057d277b0f5e80b5d8182f98cc23e8f4e680cb686ea39dbe644941e51e6a8b97b2cd19f963c38ca19fdf3452e0a0981d01e79aac5ba
@@ -38,14 +39,16 @@ EBUILD python-docs-3.3.1.ebuild 1057 SHA256 b02b8d324f80f2bf9b0e3e64d959d047ff62
 EBUILD python-docs-3.3.2.ebuild 1062 SHA256 37e36456caf3d75babfc093e9cfd65d60a90cc3ad873ab60c7bc5c2427172ad9 SHA512 c6a3a4e7848d2ded191bb30e1ade2fd60f565a7f4314abe1349ebbd502892fc307555cd317fa711d23c202fef5707d58793ca1589805633d601a8cb6ff67b299 WHIRLPOOL ad5973c48405d9b68e632157aa2da84526cb326be7b3b006d996e3ae6cf58ed35c7f9a054ab852bb2746088935b96473c4672caf01ebb5fd39ca9234b913db90
 EBUILD python-docs-3.3.3.ebuild 1074 SHA256 fd210f88407ea296a04ff9e9dc8a55dd1f60c07579c5010a4def1cb1f8d4dbdc SHA512 a73767d56b1f6dbc1eae1b983870059dcbff7127b31b0f118794ce87a0e328de1dcc228b06182f93ea1e6bde8ba705d15e9cbdcbc97a9d99dafc41f65bb63e7c WHIRLPOOL e586678eb34abe2c33b8ef1186a88127022d7a2a011f87e8d1273dbb4cc8f50ccd6a9efaf8337b1b3e9cba7eee451060e80b4314aa6ade35257d8dcaa53473df
 EBUILD python-docs-3.3.4.ebuild 1075 SHA256 9cab6efc40587a7370d3531c55aec3fc62c4c79e712180b095b22019cf1ca33c SHA512 c19550fe3a26222c5a2ef2a5eca9568c23897c6341dcde1e85a240646ef1efccd58f5ea785282d1d756df1ef39f82c69d0a32e4c487874e3f7a014fca02685bc WHIRLPOOL 884e183042d6bb5e7ffeb1654c0e057f9cc1c60e7eaa6a33ab4d9291a4cd6500d22ce40f3b853e7d69ad41b567cc84b6726b67448252041ef390e1ee00817a14
+EBUILD python-docs-3.3.5-r1.ebuild 1085 SHA256 2bc8f702830e70cba36394210d6e13cedaab565629d8af23f051c59a6f26b892 SHA512 f841ab618b78d41d27ffeeccd5958419e7c9b038ba4c601ab94ed2bf1c73cd7ff1fa59d926f9406527a589e1f4e98fd825e805d8ec023e025f7cc46bf10bdf66 WHIRLPOOL 651a2ebf9531ce3146840c0e9b8a71fb9c2b33595e8eabb6720f357dab551b66b50646fc5c3a214acf04bd2ef2236d825c734405b0a6daf74e2fc7b7f20f2dcb
 EBUILD python-docs-3.3.5.ebuild 1082 SHA256 117344e0525df002e4b385e91eec75d4b0389ff47bc2874455f0cc379dd79182 SHA512 e3ba7ddc63c3eb84cb77394e2981511eeb221e97efc061163608f19909cd4744cb94e2bcf8f9430b1a09ca05a125b071785bcb0627725c705e93b9ff8fdfcca3 WHIRLPOOL 64520f7122b0a161ba6b10b7d6042dca1b0c4b0efe2db3e0cb1e25330002d3b3ea5ed0f1078a417595ddf5d3a8cc7ae7c5ccbc945a59e057b2c3f9f712e542fe
-EBUILD python-docs-3.4.0.ebuild 1295 SHA256 374d512401f418cc6e8cd630a955e7a56cd13d3d27f4b35891bcb09b69445cfb SHA512 b265576a107039caaf8f37ede4df72fda6a1acc09a71c1b6d8bab3d51d5e95630afc6b6bedfa489e53bfd06019973da493f81603c8d477ad262fee535b1c1aea WHIRLPOOL e527b66eca9ac9b133989dd8b788ec291b064b282fbbbd85e5cbed7294060d8eb4169d5f3e57c3e994749f5bb8424ebf58cac8da5180bf8c36dee3e86e6001bd
-MISC ChangeLog 26198 SHA256 f77ab567b00e855238e0a23bb71a9704de5faf7a23325ef5da18c2d8c96965fe SHA512 af1f40fc4203e0e51844de5486816c3abcbbf7e5eb91a2751d375335d2c8ee6326079f3485635621c64864edeeee526df0acc645abe569ac7c926e488b7d6bed WHIRLPOOL 02375e80201ff1ec9188efb9d930fa3a796bda75bc243239467e6920f48bab56ff70be2b36f1bd11b696a11f2d1f28948467bc02fcfe9b532ec3f77ffbacda48
+EBUILD python-docs-3.4.0-r1.ebuild 1298 SHA256 c3a426ff870a763aafa2fd9682801ab9eeb2b0f39e304098cd3f38ccaca21a00 SHA512 50c44fb9f2e7fde58efff37d4f4a38ec3292898e630ba15128c59da41f8a8608b98b2b855a5104ee8e35b43c7953cc0646707d1c3933a38d35bea599ff9401e2 WHIRLPOOL 3e7d824b681692e13bcd712cfd8d432ca3ace4a0a31c6f91584478806a0467a1dab6e04141992f8fe53f86e1d9590efd7f1ddc84dd6f3c63976daaf809a05f24
+EBUILD python-docs-3.4.0.ebuild 1288 SHA256 2222fff838fca97f17afd879fdb0f12ba184e79372d23e426df9c47316f64643 SHA512 c43675f5802f5c5e6d7e81ddcb0c0ac12a282108340623cb048e8469727feba35b7b45826e2a2f8d3e6c8fab7ae2cd5ab62887e9f6a9384694473b537447c310 WHIRLPOOL 0c3bf216bcc3d20bae99917f736e939fdef871a2c125ce759085826f68d6683c7bfcc1c31bcf8ed1992b2208286f8b6553a9b448ff2346b8f82cb5736dbbdd39
+MISC ChangeLog 26537 SHA256 2c5afa86258fe5fa95d163712d90785289cb724d258ef8ac1268541ab3fea8f4 SHA512 590a658ba59c02bcd4f12f481be99989f994d51b84b69d024197db545e0c5e65897e703aae00c5d818e5beb1e5f4d93869becf4141eaa578135444b7833bcb01 WHIRLPOOL acdb6a54b98d7f053795bb2522e026bc1ef6dacbc8f1ed79c6ac8a14d4047548e63448fb2586b08d1bfb5966eb38f1feff8f2df974276182b9ef365e75ded83a
 MISC metadata.xml 159 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4 SHA512 d5a29b9f6ecddfc368dc0f1f8919cd3c3d6ecf2c7a82bc8d4c0dd51b7aa15561ed0462acb8ae39bc84f97e706e82d9b4b06357494f164f1648219f604b473fbe WHIRLPOOL 36e19b63a1b307cc200e1d73499b7477f73799db3909e71b5a0916084728351c76d400f65e2c8b3f8fffb2c9ba54c0bd235f785b47414178d98f11d64a9420d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlQFZSIACgkQso7CE7gHKw03KwCdG3guBzbjjwj4C/+md/AOtk88
-iesAni1b3F50i6Kzt26U7cJwEvkQ2zKl
-=Ercq
+iEYEAREIAAYFAlQH1jIACgkQso7CE7gHKw2w2ACgyAk8Q/skgfBMb5DFWXMFYpbv
+wpYAoMArce5hfGOPhwwEzFURAWeeRPBz
+=bIzu
 -----END PGP SIGNATURE-----
