@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-docs/python-docs-2.7.6.ebuild,v 1.3 2014/09/04 03:11:17 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-docs/python-docs-3.3.5-r1.ebuild,v 1.1 2014/09/04 03:11:17 idella4 Exp $
 
 EAPI="5"
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.python.org/doc/"
 SRC_URI="http://www.python.org/ftp/python/doc/${PV}/python-${PV}-docs-html.tar.bz2"
 
 LICENSE="PSF-2"
-SLOT="2.7"
+SLOT="3.3"
 KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos"
 IUSE=""
 
@@ -19,7 +19,7 @@ RDEPEND=""
 S="${WORKDIR}/python-${PV}-docs-html"
 
 src_install() {
-	dohtml -A xml -r ./
+	dohtml -A xml -A inv -r ./
 	echo "PYTHONDOCS_${SLOT//./_}=\"${EPREFIX}/usr/share/doc/${PF}/html/library\"" > "60python-docs-${SLOT}"
 	doenvd "60python-docs-${SLOT}"
 }
