@@ -6,4 +6,4 @@ KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh
 LICENSE=PSF-2
 SLOT=2.7
 SRC_URI=http://www.python.org/ftp/python/doc/2.7.6/python-2.7.6-docs-html.tar.bz2
-_md5_=a6dcffa126b254471f17a7ef4d87216d
+_md5_=2c939f7e3e8a4d9f45c1216bdbb80ba6
