@@ -1,9 +1,9 @@
-DEFINED_PHASES=install postrm setup
+DEFINED_PHASES=install postrm
 DESCRIPTION=HTML documentation for Python
 EAPI=5
 HOMEPAGE=http://www.python.org/doc/
 KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos
 LICENSE=PSF-2
-SLOT=3.4
-SRC_URI=http://www.python.org/ftp/python/doc/3.4.0/python-3.4.0-docs-html.tar.bz2
-_md5_=7cf2ad2cdc1da5b8048ad21537dbdf0d
+SLOT=3.3
+SRC_URI=http://www.python.org/ftp/python/doc/3.3.5/python-3.3.5-docs-html.tar.bz2
+_md5_=209b9a687b1eb5392dfc6bc21120c15a
