@@ -6,4 +6,4 @@ KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh
 LICENSE=PSF-2
 SLOT=3.4
 SRC_URI=http://www.python.org/ftp/python/doc/3.4.0/python-3.4.0-docs-html.tar.bz2
-_md5_=7cf2ad2cdc1da5b8048ad21537dbdf0d
+_md5_=5f5d652942b8090909396ba0b186a47b
